--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: hello
-          image: devops-practice-277006/sample-app
+          image: gcr.io/devops-practice-277006/demo-app/sample-app     
           imagePullPolicy: Always
           ports:
           - containerPort: 5000
