--- a/pod-template-sameCluster.yaml
+++ b/pod-template-sameCluster.yaml
@@ -1,18 +1,17 @@
----
 apiVersion: "v1"
 kind: "Pod"
 metadata:
   annotations:
-    buildUrl: "http://jenkins.jenkins.svc.cluster.local/job/Samples-VaultIntegration/job/vault-integration-test/1/"
-    runUrl: "job/Samples-VaultIntegration/job/vault-integration-test/1/"
+    buildUrl: "http://jenkins.jenkins.svc.cluster.local/job/vault-demo/9/"
+    runUrl: "job/vault-demo/9/"
   labels:
     jenkins/kube-default: "true"
     app: "jenkins"
     component: "agent"
     jenkins/jenkins-jenkins-agent: "true"
-    jenkins/label-digest: "a96bc6352cb0632aa3ce7c32a6b12c4a3b8ef7ba"
-    jenkins/label: "Samples-VaultIntegration_vault-integration-test_1-g4nxh"
-  name: "samples-vaultintegration-vault-integration-test-1-g4nxh-l-291wd"
+    jenkins/label-digest: "dd63ec6749967bfef693b81c8f0811776e6de648"
+    jenkins/label: "vault-demo_9-spqnc"
+  name: "vault-demo-9-spqnc-zc90w-mh7gz"
   namespace: "jenkins"
 spec:
   affinity:
@@ -25,12 +24,24 @@ spec:
             values:
             - "slave"
   containers:
-  - args:
-    - "99d"
-    command:
-    - "sleep"
-    image: "gcr.io/devops-practice-277006/cd-jk-upgrade/cd-jenkins-agent:2.0"
-    name: "custom-jnlp"
+  - command:
+    - "cat"
+    image: "google/cloud-sdk:latest"
+    name: "gcloud"
+    tty: true
+    volumeMounts:
+    - mountPath: "/root/.docker"
+      name: "sharedvolume"
+    - mountPath: "/var/run"
+      name: "docker-socket"
+    - mountPath: "/home/jenkins/agent"
+      name: "workspace-volume"
+      readOnly: false
+  - command:
+    - "cat"
+    image: "gcr.io/cloud-builders/kubectl"
+    name: "kubectl"
+    tty: true
     volumeMounts:
     - mountPath: "/home/jenkins/agent"
       name: "workspace-volume"
@@ -39,25 +50,25 @@ spec:
     - "99d"
     command:
     - "sleep"
-    image: "ubuntu"
-    name: "shell"
+    image: "docker:19.03.1"
+    name: "docker"
     volumeMounts:
+    - mountPath: "/var/run"
+      name: "docker-socket"
+    - mountPath: "/root/.docker"
+      name: "sharedvolume"
     - mountPath: "/home/jenkins/agent"
       name: "workspace-volume"
       readOnly: false
-  - args:
-    - "99d"
-    command:
-    - "sleep"
-    env:
-    - name: "GOOGLE_APPLICATION_CREDENTIALS"
-      value: "/secret/jenkins-sa-devops-practice.json"
-    image: "gcr.io/kaniko-project/executor:debug-539ddefcae3fd6b411a95982a830d987f4214251"
-    imagePullPolicy: "Always"
-    name: "kaniko"
+  - image: "docker:19.03.1-dind"
+    name: "docker-daemon"
+    securityContext:
+      privileged: true
     volumeMounts:
-    - mountPath: "/secret"
-      name: "kaniko-secret"
+    - mountPath: "/var/run"
+      name: "docker-socket"
+    - mountPath: "/root/.docker"
+      name: "sharedvolume"
     - mountPath: "/home/jenkins/agent"
       name: "workspace-volume"
       readOnly: false
@@ -65,11 +76,11 @@ spec:
     - name: "JENKINS_SECRET"
       value: "********"
     - name: "JENKINS_AGENT_NAME"
-      value: "samples-vaultintegration-vault-integration-test-1-g4nxh-l-291wd"
+      value: "vault-demo-9-spqnc-zc90w-mh7gz"
     - name: "JENKINS_WEB_SOCKET"
       value: "true"
     - name: "JENKINS_NAME"
-      value: "samples-vaultintegration-vault-integration-test-1-g4nxh-l-291wd"
+      value: "vault-demo-9-spqnc-zc90w-mh7gz"
     - name: "JENKINS_AGENT_WORKDIR"
       value: "/home/jenkins/agent"
     - name: "JENKINS_URL"
@@ -95,9 +106,11 @@ spec:
     operator: "Equal"
     value: "slave"
   volumes:
-  - name: "kaniko-secret"
-    secret:
-      secretName: "kaniko-secret"
   - emptyDir:
       medium: ""
     name: "workspace-volume"
+  - emptyDir: {}
+    name: "sharedvolume"
+  - emptyDir: {}
+    name: "docker-socket"
+
